--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "nodemon": "^2.0.7",
     "solc": "^0.8.3",
     "web3": "^1.3.5"
+  },
+  "devDependencies": {
+    "@truffle/hdwallet-provider": "^1.2.6"
   }
 }
